# stratmat

./: .gitignore  CNAME  Cargo.toml  README.md  components.html  design.md  index.html  log  rustfmt.toml  types
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
assets/: arenas.listing  assets
assets/arenas/: .dirname  .listing
assets/arenas/savage/pandaemonium/: p9s.arena.ron
assets/arenas/savage/pandaemonium/anabaseios/: p9s.arena.ron
assets/arenas/ultimate/fru/: i1.arena.ron  p1.arena.ron  p2.arena.ron  p3.arena.ron  p4.arena.ron  p5.arena.ron
assets/arenas/ultimate/tea/: p1.arena.ron
public/: components.html  index.html  twocanvas.html
serve/: CNAME
src/: arena.rs  color.rs  cursor.rs  drag.rs  ecs.rs  future.rs  hitbox.rs  main.rs  spawner.rs  systems.rs  testing.rs  waymark.rs  widget.rs
src/arena/: component_dom.rs  folder.rs  menu.rs  menu_egui.rs  mod.rs
src/asset/: lifecycle.rs  listing.rs  mod.rs
src/component/: mod.rs
src/debug/: mod.rs
src/ecs/: conflicts.rs  given.rs  mod.rs  nested.rs  param.rs
src/egui/: menu.rs  widget.rs
src/image/: dom.rs  egui.rs  mod.rs
src/player/: job.rs  mod.rs  window.rs  window_egui.rs
src/shape/: egui.rs  mod.rs
src/spawner/: egui.rs  mod.rs  panel.rs  panel_egui.rs  test_egui.rs
src/waymark/: mod.rs  window.rs  window_egui.rs
src/widget/: dom.rs  egui.rs  mod.rs
static/app/: stratmat.js  stratmat_components.js
static/app/assets/arenas/: .listing
static/app/assets/arenas/savage/pandaemonium/: .dirname
static/app/assets/arenas/savage/pandaemonium/anabaseios/: .dirname  p9s.arena.ron
static/app/assets/arenas/ultimate/fru/: .dirname  i1.arena.ron  p1.arena.ron  p2.arena.ron  p3.arena.ron  p4.arena.ron  p5.arena.ron
static/app/assets/arenas/ultimate/tea/: .dirname  p1.arena.ron
tools/: generate_asset_listings.sh  web-deploy-local.sh
tools/tataru/: Cargo.toml
tools/tataru/src/: lib.rs  main.rs
