[package]
name = "stratmat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_winit",
    "default_font",
    "jpeg",
    "multi_threaded",
    "serialize",
    "png",
    "trace",
    "webgl2",
    "x11",
    "webp",
] }
bevy-inspector-egui = { version = "0.28.0", default-features = false, features=[
    "bevy_render",
    "bevy_image",
    "egui_clipboard",
    "egui_open_url",
] }
bevy_egui = "0.31.1"
bevy_vector_shapes = "0.9.2"
avian2d = { version = "0.1.2", features = ["serialize", "debug-plugin"] }
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive", "env"] }
derive_more = { version = "1.0.0", default-features = false, features = [
    "from",
] }
enum-iterator = "2.1.0"
eyre = "0.6.12"
float_eq = "1.0.1"
int-enum = "1.1.2"
itertools = "0.13.0"
log = "0.4.22"
parry2d = { version = "0.17.4", features = [
    "serde",
    "simd-is-enabled",
    "simd-stable",
    "serde-serialize",
] }
ron = "0.8.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tracing = "0.1.41"

[target.'cfg(target_arch = "wasm32")'.dependencies]
convert_case = "0.6.0"
js-sys = "0.3.74"
wasm-bindgen = "0.2.97"
web-sys = { version = "0.3.74", features = ["HtmlElement", "DomStringMap"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (esp. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = true

[profile.release-size]
inherits = "release"
opt-level = "z"

[patch.crates-io]
# These crates haven't yet released with 0.15 support.
avian2d = { git = "https://github.com/Jondolf/avian.git" }
