[package]
name = "stratmat"
version.workspace = true
authors.workspace = true
edition = "2021"

[workspace.package]
version = "0.2.0"
authors = ["Alexis 'spectria.limina' Hunt"]

[features]
default = ["egui"]
dom = []
egui = [
    "dep:bevy_egui",
    "dep:bevy-inspector-egui",
    "dep:bevy_vector_shapes",
    "avian2d/debug-plugin",
    "bevy/bevy_animation",
    "bevy/default_font",
    "bevy/jpeg",
    "bevy/multi_threaded",
    "bevy/png",
    "bevy/webp",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_winit",
    "bevy/x11",
    "bevy/webgl2",
]

[workspace.dependencies]
tataru = { path = "tools/tataru" }

bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_asset",
    "bevy_picking",
    "bevy_scene",
    "serialize",
    "trace",
] }
clap = { version = "4.5.21", features = ["derive", "env"] }
eyre = "0.6.12"
map-macro = "0.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies]
avian2d = { version = "0.1.2", features = [
    "2d",
    "default-collider",
    "f32",
    "parry-f32",
], default-features = false }
bevy = { workspace = true, features = ["bevy_color"] }
bevy-inspector-egui = { version = "0.28.0", optional = true, default-features = false, features = [
    "bevy_render",
    "bevy_image",
    "egui_clipboard",
    "egui_open_url",
] }
bevy_egui = { version = "0.31.1", optional = true }
bevy_vector_shapes = { version = "0.9.2", optional = true }
chrono = "0.4.38"
clap.workspace = true
derive-where = "1.2.7"
derive_more = { version = "1.0.0", default-features = false, features = [
    "from",
    "debug",
] }
enum-iterator = "2.1.0"
eyre.workspace = true
fixedbitset = "0.5.7"
float_eq = "1.0.1"
i-cant-believe-its-not-bsn = "0.2.0"
int-enum = "1.1.2"
itertools = "0.13.0"
log = "0.4.22"
prettytable = "0.10.0"
ron = "0.8.1"
serde.workspace = true
serde_json.workspace = true
tataru.workspace = true
thiserror = "2.0.3"
tracing.workspace = true
uuid = "1.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
convert_case = "0.6.0"
js-sys = "0.3.74"
wasm-bindgen = "0.2.97"
web-sys = { version = "0.3.74", features = [
    "console",
    "Document",
    "DomStringMap",
    "HtmlCanvasElement",
    "HtmlElement",
    "NodeList",
    "Window",
] }

# As if this won't thrash cache...
[profile.dom]
inherits = "dev"

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies (esp. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = true

[profile.release-size]
inherits = "release"
opt-level = "z"

[patch.crates-io]
# These crates haven't yet released with 0.15 support.
avian2d = { git = "https://github.com/Jondolf/avian.git", rev = "c4840dd" }
